--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <%= navbar_collapse do %>
     <%= navbar_group align: 'right' do %>
       <% if user_signed_in? %>
-        <%= navbar_item 'Logout', destroy_user_session_path, :method => :delete %>
+        <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
       <% else %>
         <%= navbar_item 'Login', user_omniauth_authorize_path(:google_oauth2) %>
       <% end %>
