Make home page bulleted.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,6 @@
 <h1>All Blogs</h1>
+<ul>
 <% @users.each do |user| %>
-<%= link_to user.name, user_posts_path(user) %>
+<li><%= link_to user.name, user_posts_path(user) %></li>
 <% end %>
+</ul>
