--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,34 +23,12 @@
     <%= f.label :body %><br>
     <%= f.text_area :body %>
   </div>
-  <%= f.fields_for :images do |image_form| %>
-    <div class='image_field'>
-      <div class="field">
-        <%= image_form.label :_destroy %>
-        <%= image_form.check_box :_destroy %>
-      </div>
-      <% if image_form.object.file.exists? %>
-        <%= image_tag image_form.object.file.url, width: "100px" %>
-      <% else %>
-        <div class="field">
-          <%= image_form.label :file %>
-          <%= image_form.file_field :file %>
-        </div>
-      <% end %>
-      <div class="field">
-        <%= image_form.label :caption %>
-        <%= image_form.text_field :caption %>
-      </div>
-      <div class="field">
-        <%= image_form.label :maker %>
-        <%= image_form.text_field :maker %>
-      </div>
-      <div class="field">
-        <%= image_form.label :src, "Source URL" %>
-        <%= image_form.text_field :src %>
-      </div>
-    </div>
-  <% end %>
+  <div class='images'>
+    <%= f.fields_for :images do |image_form| %>
+      <%= render 'image_fields', f: image_form %>
+    <% end %>
+    <%= link_to_add_association 'add an image', f, :images %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
