--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>All Blogs</h1>
 <ul>
 <% @users.each do |user| %>
-<li><%= link_to user.name, user_posts_path(user) %> (<%= user.last_active_time %>)</li>
+<li><%= link_to user.name, user_posts_path(user) %> (<%= render 'status_report', user: user %>)</li>
 <% end %>
 </ul>
