Change Maker to Photographer (maybe should be the IPTC/EXIF term).

--- a/app/views/posts/_image_fields.html.erb
+++ b/app/views/posts/_image_fields.html.erb
@@ -12,7 +12,7 @@
   <%= f.text_field :caption %>
 </div>
 <div class="field">
-  <%= f.label :maker %>
+  <%= f.label :maker, "Photographer" %>
   <%= f.text_field :maker %>
 </div>
 <div class="field">
