--- a/app/views/users/_status_report.html.erb
+++ b/app/views/users/_status_report.html.erb
@@ -1,3 +1,3 @@
-<%= user.last_active_time %>,
-<%= user.posts.published.count %> published /
-<%= user.posts.unpublished.count %> unpublished posts
+<td><%= user.last_active_time %></td>
+<td class="pub"><%= user.posts.published.count %></td>
+<td class="warning"><%= user.posts.unpublished.count %></td>
