--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
 <h1>All Blogs</h1>
-<ul>
-<% @users.each do |user| %>
-<li><%= link_to user.name, user_posts_path(user) %> (<%= render 'status_report', user: user %>)</li>
-<% end %>
-</ul>
+<%= grid(@users_grid) do |grid|
+  grid.column(name: "Name") { |user| link_to user.name, [user, :posts] }
+  grid.column(name: "Last Active") { |user| user.last_active_time }
+  grid.column(name: "Publised Posts") { |user| user.posts.published.count }
+  grid.column(name: "Unpublished Posts") { |user| user.posts.unpublished.count }
+  grid.column(name: "Total Posts") { |user| user.posts.count }
+end -%>
