--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,48 @@
 <h1>All Blogs</h1>
+
 <%= grid(@users_grid) do |grid|
-  grid.column(name: "Name") { |user| link_to user.name, [user, :posts] }
-  grid.column(name: "Last Active") { |user| user.last_active_time }
-  grid.column(name: "Publised Posts") { |user| user.posts.published.count }
-  grid.column(name: "Unpublished Posts") { |user| user.posts.unpublished.count }
-  grid.column(name: "Total Posts") { |user| user.posts.count }
+  grid.column name: "Name" do  |user|
+    link_to user.name, [user, :posts]
+  end
+  grid.column name: "Section" do |user|
+    #user.sections[0].name
+  end
+  grid.column name: "Last Active" do  |user|
+    if user.last_active_time
+      idle_time = ((Time.current - user.last_active_time) / 1.minute).round
+      case
+        when idle_time < 1
+          ["now", {class: 'success'}]
+
+        when idle_time < 5
+          [idle_time, {class: 'success'}]
+
+        when idle_time < 15
+          [idle_time, {class: 'warning'}]
+
+        else
+          [idle_time, {class: 'danger'}]
+      end
+    else
+      ["Never", {class: 'danger'}]
+    end
+  end
+  grid.column name: "Publised Posts" do  |user|
+    if user.posts.published.count == 0
+      [user.posts.published.count, {class: 'danger'}]
+    else
+      user.posts.published.count
+    end
+  end
+  grid.column name: "Unpublished Posts" do  |user|
+    if user.posts.unpublished.count == 0 &&
+        user.posts.published.count == 0
+      [user.posts.unpublished.count, {class: 'danger'}]
+    else
+      user.posts.unpublished.count
+    end
+  end
+  grid.column name: "Total Posts" do  |user|
+    user.posts.count
+  end
 end -%>
