--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,19 +5,23 @@
     link_to user.name, [user, :posts]
   end
   grid.column name: "Section" do |user|
-    #user.sections[0].name
+    if user.sections[0].name
+      user.sections[0].name
+    else
+      link_to "Assign", [user, :edit]
+    end
   end
   grid.column name: "Last Active" do  |user|
     if user.last_active_time
       idle_time = ((Time.current - user.last_active_time) / 1.minute).round
-      case
-        when idle_time < 1
+      case idle_time
+        when 0..1
           ["now", {class: 'success'}]
 
-        when idle_time < 5
+        when 2..5
           [idle_time, {class: 'success'}]
 
-        when idle_time < 15
+        when 6..15
           [idle_time, {class: 'warning'}]
 
         else
