--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,12 @@
 <h1><%= @user.name %>'s Blog</h1>
 
 <% @posts.each do |post| %>
-    <h1><%= link_to post.title, [@user, post] %></h1>
+    <h1>
+      <%= link_to post.title, [@user, post] %>
+      <% if !post.published %>
+        <b>(unpublished)</b>
+      <% end %>
+    </h1>
     <p><%= post.body %></p>
 
     <% if policy(post).edit? %>
