Start work on cleaner post UI/UX.

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :published %><br>
     <%= f.check_box :published %>
+    <%= f.label :published, "Publish" %>
   </div>
   <div class='images'>
     <%= f.fields_for :images do |image_form| %>
