--- a/app/views/posts/_image_fields.html.erb
+++ b/app/views/posts/_image_fields.html.erb
@@ -7,9 +7,11 @@
     <%= f.file_field :file %>
   </div>
 <% end %>
+<br>
+<br>
 <div class="field">
   <%= f.label :caption %>
-  <%= f.text_field :caption %>
+  <%= f.text_area :caption, rows: 4 %>
 </div>
 <div class="field">
   <%= f.label :maker, "Photographer" %>
