--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,39 +1,46 @@
 <div class='post'>
-<h1>
-  <%= @post.title %>
-</h1>
+  <div>
+    <h1>
+      <%= @post.title %>
+    </h1>
 
-<p>
-  <% unless @post.published %> <strong> Unpublished </strong> <% end %>
-  <% unless @post.user.name == @user.name %>
-    By <%= @post.user.name %>
-  <% end %>
-</p>
+    <p>
+      <% unless @post.published %> <strong> Unpublished </strong> <% end %>
+      <% unless @post.user.name == @user.name %>
+        By <%= @post.user.name %>
+      <% end %>
+    </p>
 
-<% if @post.parent%>
-<p>
-  <strong>Parent:</strong>
-  <%= @post.parent %>
-</p>
-<% end %>
+    <% if @post.parent%>
+    <p>
+      <strong>Parent:</strong>
+      <%= @post.parent %>
+    </p>
+    <% end %>
 
-<div class='images'>
-  <% @post.images.each do |image| %>
-    <figure>
-      <%= link_to (image_tag image.file.url, width: '25%'), image.file.url %>
-      <figcaption>
-        <p><%= image.caption %><p>
-        <% if image.maker %> By <%= image.maker %> <br> <% end %>
-        <% if image.src %><%= link_to 'Image Source', image.src %> <%end%>
-      </figcaption>
-    </figure>
-  <% end %>
+    <div class='post-images'>
+      <% @post.images.each do |image| %>
+        <figure>
+          <%= link_to (image_tag image.file.url, class: 'post-image'),
+            image.file.url %>
+          <figcaption class='post-image-caption'>
+            <p><%= image.caption %>
+            <% if image.maker %> By <b><%= image.maker %></b><% end %></p>
+            <p class='post-image-link'>
+              <% if image.src %><%= link_to 'Image Source', image.src %> <%end%>
+            </p>
+          </figcaption>
+        </figure>
+      <% end %>
+    </div>
+
+    <p>
+      <%= @post.body %>
+    </p>
+  </div>
+  <div class='post-links'>
+    <hr>
+    <%= link_to 'Edit', [:edit, @user, @post] %> |
+    <%= link_to 'Back', [@user, :posts] %>
+  </div>
 </div>
-<hr>
-
-<p>
-  <%= @post.body %>
-</p>
-</div>
-<%= link_to 'Edit', [:edit, @user, @post] %> |
-<%= link_to 'Back', [@user, :posts] %>
