--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -22,6 +22,25 @@
   width: 310px;
 }
 
+// Used by post#index
+
+.index-image {
+  float: left;
+  width: 25%;
+  margin-right: 6px;
+}
+
+.unpublished-post {
+  font-size: 50%;
+  font-weight: bold;
+}
+
+.index-edit-links {
+  text-align: right;
+}
+
+// Used by post#show
+
 .post-images {
   float: left;
   width: 25%;
