--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -2,12 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.image_field {
-  border: 1px solid;
+.images {
   margin-bottom: 5px;
-  margin-right: 5px;
-  padding: 5px;
-  float: left
 }
 
 .actions {
