Fix display of short posts.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -29,6 +29,8 @@
       <%= link_to 'Delete', [@user, post], method: :delete,
         data: { confirm: 'Are you sure?' } %>
     <% end %>
+    <br style="clear: both;">
+
   </div>
 
 <% end %>
