--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Tasks</h1>
+<h1>Blog Prompts</h1>
 
+<%= grid(@tasks_grid) do |g|
+  g.column name: "Title" do  |t|
+    link_to t.title, t
+  end
+  g.column name: "Description" do  |t|
+    truncate t.body.squish, :length => 142, :separator => ' '
+  end
+  g.column name: "Objective" do  |t|
+    t.category
+  end
+end -%>
+
+<!--
 <table>
   <thead>
     <tr>
@@ -27,6 +40,7 @@
     <% end %>
   </tbody>
 </table>
+-->
 
 <br>
 
