--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,7 +7,8 @@
     link_to t.title, t
   end
   g.column name: "Description" do  |t|
-    truncate t.body.squish, :length => 142, :separator => ' '
+    md = truncate t.body.squish, :length => 142, :separator => ' '
+    markdown(md)
   end
   g.column name: "Objective" do  |t|
     t.category
