--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -20,5 +20,13 @@
   <%= @task.time_required %>
 </p>
 
-<%= link_to 'Edit', edit_task_path(@task) %> |
-<%= link_to 'Back', tasks_path %>
+<div class='task-index-edit-links'>
+  <% if policy(@task).edit? %>
+    <%= link_to 'Edit', edit_task_path(@task) %> |
+  <% end %>
+  <% if policy(@task).destroy? %>
+    <%= link_to 'Delete', [@user, @task], method: :delete,
+      data: { confirm: 'Are you sure?' } %> |
+  <% end %>
+  <%= link_to 'Back', tasks_path %>
+</div>
