Comment out recent posts – routes are wrong.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <%= navbar_collapse do %>
     <%= navbar_group do %>
       <%= navbar_dropdown 'Blog' do %>
-          <%= navbar_item 'Recent', posts_path %>
+          <%#= navbar_item 'Recent', posts_path %>
           <%= navbar_item 'Prompts', tasks_path %>
       <% end %>
     <% end %>
