--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -43,4 +43,10 @@ end -%>
 
 <br>
 
-<%= link_to 'New Task', new_task_path %>
+<div class='task-index-edit-links'>
+  <% if policy(Task).create? %>
+    <%= link_to 'New Task', new_task_path %> |
+  <% end %>
+
+  <%#= link_to 'Back', tasks_path %>
+</div>
