--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,39 +1,43 @@
 <h1> <%= @h1 %> </h1>
-<% @posts.each do |post| %>
-  <hr>
-  <% if post.images.first %>
-    <div>
-        <figure>
-          <%=
-            link_to (image_tag post.images.first.file.url, class: 'index-image'),
-            [@user, post]
-          %>
-        </figure>
+<div class="post-index">
+  <% @posts.each do |post| %>
+    <hr>
+    <div class="post-index-item"
+      <% if post.images.first %>
+        <div>
+            <figure>
+              <%=
+                link_to (image_tag post.images.first.file.url, class: 'index-image'),
+                [@user, post]
+              %>
+            </figure>
+        </div>
+      <% end %>
+
+      <div class="post-index-item-body">
+        <h1>
+          <%= link_to post.title, [@user, post] %>
+          <% unless post.published %>
+            <span class='unpublished-post'>(unpublished)</span>
+          <% end %>
+        </h1>
+        <p><%= markdown post.body %></p>
+      </div>
+
+      <div class='index-edit-links'>
+        <% if policy(post).edit? %>
+          <%= link_to 'Edit', [:edit, @user, post] %> |
+        <% end %>
+        <% if policy(post).destroy? %>
+          <%= link_to 'Delete', [@user, post], method: :delete,
+            data: { confirm: 'Are you sure?' } %>
+        <% end %>
+        <br style="clear: both;">
+
+      </div>
     </div>
   <% end %>
-
-  <h1>
-    <%= link_to post.title, [@user, post] %>
-    <% unless post.published %>
-      <span class='unpublished-post'>(unpublished)</span>
-    <% end %>
-  </h1>
-  <p><%= post.body %></p>
-
-  <div class='index-edit-links'>
-    <% if policy(post).edit? %>
-      <%= link_to 'Edit', [:edit, @user, post] %> |
-    <% end %>
-    <% if policy(post).destroy? %>
-      <%= link_to 'Delete', [@user, post], method: :delete,
-        data: { confirm: 'Are you sure?' } %>
-    <% end %>
-    <br style="clear: both;">
-
-  </div>
-
-<% end %>
-
+</div>
 <br>
 <hr>
 
