--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,47 +1,48 @@
-<h1> <%= @h1 %> </h1>
+<!--
+---- app/views/posts/index.html.erb
+----
+---- Called as:
+----   /                     - display all posts by current user
+----   /posts                - display list of all posts
+----   /users/:user_id/posts - display list of all posts for user :user_id
+-->
+
 <div class="post-index">
-  <% @posts.each do |post| %>
-    <hr>
-    <div class="post-index-item"
-      <% if post.images.first %>
-        <div>
+  <div class="post-index-author">
+    <% if @h1 %><h1 class="post-index-author"><%= @h1 %></h1><hr><% end %>
+  </div>
+  <% @posts.each do |p| %>
+    <div class="post-index-item">
+        <div class="post-index-item-image">
+          <% if p.images.first %>
             <figure>
               <%=
-                link_to (image_tag post.images.first.file.url, class: 'index-image'),
-                [@user, post]
+                link_to (image_tag p.images.first.file.url,
+                  class: 'post-index-item-image'), [@user, p]
               %>
             </figure>
+          <% else %>
+            &nbsp;
+          <% end %>
         </div>
-      <% end %>
 
       <div class="post-index-item-body">
-        <h1>
-          <%= link_to post.title, [@user, post] %>
-          <% unless post.published %>
+        <h1 class="post-index-item-body-title">
+          <%= link_to p.title, [@user, p] %>
+          <% unless p.published %>
             <span class='unpublished-post'>(unpublished)</span>
           <% end %>
         </h1>
-        <p><%= markdown post.body %></p>
-      </div>
-
-      <div class='index-edit-links'>
-        <% if policy(post).edit? %>
-          <%= link_to 'Edit', [:edit, @user, post] %> |
-        <% end %>
-        <% if policy(post).destroy? %>
-          <%= link_to 'Delete', [@user, post], method: :delete,
-            data: { confirm: 'Are you sure?' } %>
-        <% end %>
-        <br style="clear: both;">
-
+        <p class="post-index-item-body-text"><%= markdown p.body %></p>
       </div>
     </div>
+    <br style="clear: left;">
+    <hr>
   <% end %>
+  <div>
+    <% if policy(@user.posts.build).create? # TODO hack %>
+    <%= link_to 'New Post', new_user_post_path(@user) %> |
+    <% end %>
+    <%= link_to 'Back', :users %>
+  </div>
 </div>
-<br>
-<hr>
-
-<% if policy(@user.posts.build).create? # TODO hack %>
-<%= link_to 'New Post', new_user_post_path(@user) %> |
-<% end %>
-<%= link_to 'Back', :users %>
