--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -40,6 +40,7 @@ img.post-index-item-image {
 
 .post-index-item-body {
   float: left;
+  width: 74%;
 }
 
 .post-index-item-body-title { font-size: 24px; }
