Reduce top margin on h1, use clear class.

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -43,7 +43,10 @@ img.post-index-item-image {
   width: 74%;
 }
 
-.post-index-item-body-title { font-size: 24px; }
+.post-index-item-body-title {
+  font-size: 24px;
+  margin-top: 0;
+}
 
 .post-index-item-text {}
 
