--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -36,7 +36,7 @@
         <p class="post-index-item-body-text"><%= markdown p.body %></p>
       </div>
     </div>
-    <br style="clear: left;">
+    <br class="clear">
     <hr>
   <% end %>
   <div>
