--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,19 +15,7 @@
   grid.column name: "Last Active" do  |user|
     if user.last_active_time
       idle_time = ((Time.current - user.last_active_time) / 1.minute).round
-      status = case
-        when idle_time < 1
-          'success'
-
-        when idle_time < 5
-          'success'
-
-        when idle_time < 15
-          'warning'
-
-        else
-          'danger'
-      end
+      status = active_today?
       [time_ago_in_words(user.last_active_time) + ' ago', {class: status}]
     else
       ["Never", {class: 'danger'}]
