Color background of private comments.

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -9,6 +9,11 @@ h2.post-comments {
 .post-comment {
   width: 100%;
 }
+
+.private {
+  background-color: hsl(270, 67, 92);
+}
+
 .post-comment-body {}
 .post-comment-author {
   font-size: 95%;
