--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -36,7 +36,7 @@
     <% @post.comments.to_a.select do |comment|
       policy(comment).show?
     end.each do |comment| %>
-      <div class='post-comment'>
+      <div class='post-comment <%= comment.private? ? 'private' : 'public' %>'>
         <div class='post-comment-body'>
           <%= markdown comment.body %>
         </div>
@@ -68,7 +68,7 @@
       <%= f.input :commentable_type, as: :hidden %>
       <%= f.input :body, label: false %>
       <% if policy(f.object).create_private? %>
-        <%= f.input :private, default: true %>
+        <%= f.input :private, as: :boolean, value: 1 %>
       <% end %>
       <%= f.button :submit, 'Add comment' %>
   <% end %>
