Link for comment guidelines.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       <%= navbar_dropdown 'Blog' do %>
           <%= navbar_item 'Recent', posts_path %>
           <%= navbar_item 'Prompts', tasks_path %>
+          <%= navbar_item 'Comment Guidelines', page_path('comment-guidelines') %>
       <% end %>
     <% end %>
     <%= navbar_group align: 'right' do %>
