--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,26 +1,31 @@
 <div class='post'>
-  <div>
-    <h1>
-      <%= @post.title %>
-    </h1>
-
-    <p> <% unless @post.published %> <strong> Unpublished </strong> <% end %> <% unless @post.user.name == @user.name %> By <%= @post.user.name %> <% end %> </p>
-    <div class='post-images'>
-      <% @post.images.each do |image| %>
-        <figure>
-          <%= link_to (image_tag image.file.url, class: 'post-image'),
-            image.file.url %>
-          <figcaption class='post-image-caption'>
-            <p><%= image.caption %>
-            <% if image.maker %> By <b><%= image.maker %></b><% end %></p>
-            <p class='post-image-link'>
-              <% if image.src %><%= link_to 'Image Source', image.src %> <%end%>
-            </p>
-          </figcaption>
-        </figure>
+  <div class='post-header'>
+    <h1><%= @post.title %></h1>
+    <p>
+      <% unless @post.published %><strong>Unpublished</strong><% end %>
+      <% unless @post.user.name == current_user.name %>
+        By <%= @post.user.name %>
       <% end %>
-    </div>
+      <%= timestamp(@post) %>
+    </p>
+  </div>
+  <div class='post-images'>
+    <% @post.images.each do |image| %>
+      <figure>
+        <%= link_to (image_tag image.file.url, class: 'post-image'),
+          image.file.url %>
+        <figcaption class='post-image-caption'>
+          <p><%= image.caption %>
+          <% if image.maker %> By <b><%= image.maker %></b><% end %></p>
+          <p class='post-image-link'>
+            <% if image.src %><%= link_to 'Image Source', image.src %> <%end%>
+          </p>
+        </figcaption>
+      </figure>
+    <% end %>
+  </div>
 
+  <div class='post-body'>
     <p>
       <%= markdown @post.body %>
     </p>
@@ -30,6 +35,7 @@
     <%= link_to 'Edit', [:edit, @user, @post] %> |
     <%= link_to 'Back', [@user, :posts] %>
   </div>
+
   <div class='post-comments'>
     <h2 class='post-comments'>Comments</h2>
     <%# We really should filter comments at the SQL level. %>
@@ -46,7 +52,7 @@
               <%= comment.user.name %>,
             </span>
             <span class='post-comment-timestamp'>
-              <%= comment.created_at.getlocal('-08:00').to_s(:long) %>
+              <%= timestamp(comment) %>
             </span>
           </div>
           <% if comment.user == current_user %>
@@ -63,7 +69,8 @@
       </div>
     <% end %>
   </div>
-  <%= simple_form_for @post.comments.build, path: comments_path do |f| %>
+  <div class='post-new-comment'>
+    <%= simple_form_for @post.comments.build, path: comments_path do |f| %>
       <%= f.input :commentable_id, as: :hidden %>
       <%= f.input :commentable_type, as: :hidden %>
       <%= f.input :body, label: false %>
@@ -71,5 +78,6 @@
         <%= f.input :private, :input_html => {:checked => 'checked'} %>
       <% end %>
       <%= f.button :submit, 'Add comment' %>
-  <% end %>
+    <% end %>
+  </div>
 </div>
