--- a/app/views/objectives/index.html.erb
+++ b/app/views/objectives/index.html.erb
@@ -2,29 +2,28 @@
 
 <h1>Objectives</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Group</th>
-      <th>Name</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<%= grid(@objectives_grid) do |g|
+  g.column name: "Name" do  |t|
+    obj_name = "#{t.group}: #{t.name}"
+    link_to obj_name, t
+  end
+  g.column name: "Description" do  |t|
+    md = truncate t.description.squish, :length => 480, :separator => ' '
+    markdown(md)
+  end
+  g.column name: "Strand" do |t|
+    text = '<ol style="list-style-type: lower-roman; padding-left: 1em;">'
+    t.strands.each do |s|
+      text += '<li>' + s.description + '</li><hr>'
+    end
+    text += '</ol>'
+    text.html_safe
+  end
+end -%>
 
-  <tbody>
-    <% @objectives.each do |objective| %>
-      <tr>
-        <td><%= objective.group %></td>
-        <td><%= objective.name %></td>
-        <td><%= objective.description %></td>
-        <td><%= link_to 'Show', objective %></td>
-        <td><%= link_to 'Edit', edit_objective_path(objective) %></td>
-        <td><%= link_to 'Destroy', objective, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%#= link_to 'Show', objective %>
+<%#= link_to 'Edit', edit_objective_path(objective) %>
+<%#= link_to 'Destroy', objective, method: :delete, data: { confirm: 'Are you sure?' } %>
 
 <br>
 
