--- a/app/views/objectives/show.html.erb
+++ b/app/views/objectives/show.html.erb
@@ -12,7 +12,7 @@
 <div class='objective-strands'>
   <ol>
     <% @objective.strands.each do |strand| %>
-      <li><%= strand.description %></li>
+      <li class='objective-strand-description'><%= strand.description %></li>
     <% end %>
   </ol>
 </div>
