--- a/app/views/objectives/index.html.erb
+++ b/app/views/objectives/index.html.erb
@@ -7,14 +7,14 @@
     obj_name = "#{t.group}: #{t.name}"
     link_to obj_name, t
   end
-  g.column name: "Description" do  |t|
+  g.column name: "Description", html: {class: 'objective-objective-descriptions'} do  |t|
     md = truncate t.description.squish, :length => 480, :separator => ' '
     markdown(md)
   end
-  g.column name: "Strand" do |t|
-    text = '<ol style="list-style-type: lower-roman; padding-left: 1em;">'
+  g.column name: "Strands" do |t|
+    text = '<ol class="objective-strand-descriptions">'
     t.strands.each do |s|
-      text += '<li>' + s.description + '</li><hr>'
+      text += '<li class="objective-strand-description">' + s.description + '</li><hr>'
     end
     text += '</ol>'
     text.html_safe
