--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :body %>
     <%= f.input :category %>
     <%= f.input :time_required %>
-    <%= f.association :strands, include_blank: true %>
+    <%= f.association :strands, include_blank: true, label_method: :label %>
   </div>
 
   <div class="form-actions">
