--- a/app/views/objectives/show.html.erb
+++ b/app/views/objectives/show.html.erb
@@ -4,7 +4,7 @@
 
 <p>
   <strong>Description:</strong>
-  <%= @objective.description %>
+  <%= markdown @objective.description %>
 </p>
 
 <h2>Strands:</h2>
@@ -12,7 +12,9 @@
 <div class='objective-strands'>
   <ol>
     <% @objective.strands.each do |strand| %>
-      <li class='objective-strand-description'><%= strand.description %></li>
+      <li class='objective-strand-description'>
+        <%= markdown strand.description %>
+      </li>
     <% end %>
   </ol>
 </div>
