Convert table to wice_grid.

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -15,12 +15,12 @@
   <% end %>
 
   <p>
-    <%= f.label :title %><br>
+    <%= f.label :title %>
     <%= f.text_field :title %>
   </p>
 
   <p>
-    <%= f.label :short_title %><br>
+    <%= f.label :short_title %>
     <%= f.text_field :short_title %>
   </p>
 
