Add Unit and associate with Course. Fix seed bug.

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -2,5 +2,7 @@
   <%= @course.title %> (<%= @course.short_title %>)
 </p>
 
-<%= link_to 'Edit', edit_course_path(@course) %> | 
+<% if current_user.teacher? %>
+  <%= link_to 'Edit', edit_course_path(@course) %> |
+<% end %>
 <%= link_to 'Back', courses_path %>
