Get layout partials working.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class='footer navbar navbar-default navbar-fixed-bottom'>
   <div class='container'>
-    <% if Rails.env.development? %>
-      <%= simple_form_for User.find(1), :html => { :class => 'form-inline' } do |f| %>
+    <% if Rails.env.development? && user_signed_in? %>
+      <%= simple_form_for :user, :html => { :class => 'form-inline' } do |f| %>
         <%= f.button :submit, 'Become user' %>
         <%= f.input :name, label: false, collection: User.all %>
       <% end %>
