Linking Courses, Units, and Tasks.

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,6 +13,7 @@
         <%= navbar_item 'Courses', courses_path %>
         <%= navbar_item 'Units', units_path %>
         <%= navbar_item 'Tasks', tasks_path %>
+        <%= navbar_item 'Sections', sections_path %>
       <% end %>
       <% end %>
     <% end %>
