--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <% if current_user.teacher? %>
   <%= render 'index_teacher' %>
 <% else %>
-  <!-- TODO: display something meaningful for student user list. -->
+  <% # TODO: display something meaningful for student user list. %>
   <h1>Coming Soon</h1>
 <% end %>
