--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 @import "posts";
 @import "users";
 @import "comments";
+@import "courses";
 @import "objectives";
 @import "pages";
 @import "bootstrap-sprockets";
