--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for @course do |f| %>
+  <% # TODO: converty use really use simple_form. %>
   <% #byebug %>
   <% if @course.errors.any? %>
     <div id="error_explanation">
@@ -16,7 +17,6 @@
 
   <p>
     <%= f.input :title %>
-
     <%= f.input :short_title %>
   </p>
 
