--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,5 +1,6 @@
-<h1>Editing course</h1>
+<h1>Editing Course</h1>
 
-<%= render 'form' %>
+<%= render 'form', course: @course %>
 
+<%= link_to 'Show', @course %> |
 <%= link_to 'Back', courses_path %>
