--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,18 +1,14 @@
 <footer class='footer navbar navbar-default navbar-fixed-bottom'>
   <div class='container'>
     <% if Rails.env.development? && user_signed_in? %>
-      <%= simple_form_for :user, :html => { :class => 'form-inline' } do |f| %>
+      <%= simple_form_for(
+            :user,
+            :url => become_users_path,
+            :html => { :class => 'form-inline' }
+      ) do |f| %>
         <%= f.button :submit, 'Become user' %>
-        <%= f.input :name, label: false, collection: User.all %>
+        <%= f.input :id, label: false, collection: User.all %>
       <% end %>
-      <p>
-        <strong> Become user: </strong>
-        <ul>
-          <% User.all.each do |user| %>
-            <li> <%= link_to user.name, become_user_path(user), method: :post %> </li>
-          <% end %>
-        </ul>
-      </p>
     <% end %>
   </div>
 </footer>
