Sort users by name.

--- a/app/views/layouts/_su.html.erb
+++ b/app/views/layouts/_su.html.erb
@@ -4,5 +4,5 @@
     :html => { :class => 'form-inline' }
   ) do |f| %>
     <%= f.button :submit, 'Become user' %>
-    <%= f.input :id, label: false, collection: User.all %>
+    <%= f.input :id, label: false, collection: User.all.order(name: :asc) %>
 <% end %>
