Fix route in hopes that it will work in production.

--- a/app/views/layouts/_su.html.erb
+++ b/app/views/layouts/_su.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for(
     :user,
-    :url => become_users_path,
-    :html => { :class => 'form-inline' }
+    url: { action: 'become', controller: 'users' },
+    html: { :class => 'form-inline' }
   ) do |f| %>
     <%= f.button :submit, 'Become user' %>
     <%= f.input :id, label: false, collection: User.all.order(name: :asc) %>
